# pystray

./: pyproject.toml
.github/workflows/: haiku-docker-qemu-haiku.yml
lib/pystray/: __init__.py  _appindicator.py  _base.py  _haiku.py
src/haiku_helper/: App.cpp  App.h  DeskbarView.cpp  DeskbarView.h  MainWindow.cpp  MainWindow.h  Makefile
tests/: test_haiku.py
